@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* MandatoryViolation for Media has Media itself as feature, not the body of the Media
+	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
 * added Model.containsTypeSet
 * move Item.newType to class TypesBound
 	deprecated version is provided
